syntax = "proto3";

package gcse;

import "github.com/x0rzkov/gcse/shared/proto/spider.proto";

option go_package = "gcsepb";

message PackageCrawlHistoryReq {
	string package = 1;
}

message PackageCrawlHistoryResp {
	HistoryInfo info = 1;
}

service StoreService {
  rpc PackageCrawlHistory(PackageCrawlHistoryReq) returns (PackageCrawlHistoryResp);
}
